# docs/swagger.yaml
@@ -43,7 +43,7 @@ info:
   title: Todos API
   version: "1.0"
 paths:
-  /v1/todos:
+  /todos:
     get:
       consumes:
       - application/json
@@ -86,7 +86,7 @@ paths:
       summary: Create a Todos List
       tags:
       - todos
-  /v1/todos/{id}:
+  /todos/{id}:
     delete:
       consumes:
       - application/json
